[gd_scene load_steps=15 format=3 uid="uid://de11wfnraklxo"]

[ext_resource type="Script" path="res://src/components/ui/ui.gd" id="1_0ibs7"]
[ext_resource type="Texture2D" uid="uid://yyf21jmknuog" path="res://assets/ui/people_icon.png" id="2_w4ruf"]
[ext_resource type="Texture2D" uid="uid://jce6i6vgo6aw" path="res://assets/ui/ability_frame.png" id="3_i27ym"]
[ext_resource type="PackedScene" uid="uid://dij75oxvp88at" path="res://src/components/ui/clickable_sprite/ClickableSprite.tscn" id="3_pq1jb"]
[ext_resource type="Texture2D" uid="uid://c0hgc11pjw5br" path="res://assets/portraits/portrait-frame.png" id="5_kf4q6"]
[ext_resource type="Texture2D" uid="uid://c1e28wyab7lw4" path="res://assets/characters/angels/layla-body.png" id="6_0rxox"]
[ext_resource type="FontFile" uid="uid://d2acik6tmked" path="res://assets/fonts/CrimsonText-Regular.ttf" id="6_ekjn1"]
[ext_resource type="Texture2D" uid="uid://b3wak6eo8qvck" path="res://assets/bgs/game_start_1.png" id="6_wi4k2"]
[ext_resource type="Texture2D" uid="uid://ccuuhcpgpokd0" path="res://assets/ui/undo-icon_2.png" id="7_l2n6i"]
[ext_resource type="Texture2D" uid="uid://b5fi8m8o6eqr5" path="res://assets/ui/action-bar.png" id="7_nuuhx"]
[ext_resource type="Texture2D" uid="uid://bewuictajmvjq" path="res://assets/characters/nightmares/bloat-halfbody.png" id="8_rfbs1"]

[sub_resource type="LabelSettings" id="LabelSettings_3uust"]
font_size = 49
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_nepuh"]
colors = PackedColorArray(0.178604, 0.410124, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fryhh"]
gradient = SubResource("Gradient_nepuh")
fill_from = Vector2(1, 0)
fill_to = Vector2(0, 0)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
script = ExtResource("1_0ibs7")

[node name="Action" type="Control" parent="."]
anchors_preset = 0
offset_left = 251.0
offset_top = 1154.0
offset_right = 251.0
offset_bottom = 1154.0
mouse_filter = 1

[node name="Bg" type="Sprite2D" parent="Action"]
visible = false
position = Vector2(183, 45.5)
texture = ExtResource("7_nuuhx")

[node name="AbilityContainer" type="Control" parent="Action"]
anchors_preset = 0
offset_left = 24.0
offset_top = -12.0
offset_right = 64.0
offset_bottom = 28.0

[node name="AbilityFrame1" parent="Action/AbilityContainer" instance=ExtResource("3_pq1jb")]
position = Vector2(120, 126)
scale = Vector2(3, 3)
texture = ExtResource("3_i27ym")

[node name="AbilityFrame2" parent="Action/AbilityContainer" instance=ExtResource("3_pq1jb")]
position = Vector2(207, 44)
scale = Vector2(3, 3)
texture = ExtResource("3_i27ym")

[node name="AbilityFrame3" parent="Action/AbilityContainer" instance=ExtResource("3_pq1jb")]
position = Vector2(291, 125)
scale = Vector2(3, 3)
texture = ExtResource("3_i27ym")

[node name="AbilityFrame4" parent="Action/AbilityContainer" instance=ExtResource("3_pq1jb")]
position = Vector2(375, 44)
scale = Vector2(3, 3)
texture = ExtResource("3_i27ym")

[node name="AbilityFrame5" parent="Action/AbilityContainer" instance=ExtResource("3_pq1jb")]
position = Vector2(459, 125)
scale = Vector2(3, 3)
texture = ExtResource("3_i27ym")

[node name="Popularity" type="HBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 23.0
offset_top = 21.0
offset_right = 133.0
offset_bottom = 53.0

[node name="Control" type="Control" parent="Popularity"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="Popularity/Control"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_w4ruf")
centered = false

[node name="Label" type="Label" parent="Popularity"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "100%"
vertical_alignment = 1

[node name="Debug" type="Label" parent="."]
layout_mode = 2
offset_left = 16.0
offset_top = 13.0
offset_right = 71.0
offset_bottom = 36.0
text = "DEBUG"

[node name="Label" type="Label" parent="Debug"]
layout_mode = 0
offset_left = 1.0
offset_top = 24.0
offset_right = 52.0
offset_bottom = 47.0
theme_override_font_sizes/font_size = 8

[node name="EndTurn" type="Button" parent="."]
z_index = 99
z_as_relative = false
layout_mode = 0
offset_left = 2224.0
offset_top = 1268.0
offset_right = 2505.0
offset_bottom = 1370.0
mouse_filter = 1
theme_override_fonts/font = ExtResource("6_ekjn1")
theme_override_font_sizes/font_size = 72
text = "End Turn"
flat = true

[node name="Portrait" type="Control" parent="."]
anchors_preset = 0
offset_left = 8.0
offset_top = 636.0
offset_right = 8.0
offset_bottom = 636.0
mouse_filter = 1

[node name="image" type="Sprite2D" parent="Portrait"]
position = Vector2(208, 467)
scale = Vector2(0.789179, 0.789179)
texture = ExtResource("6_0rxox")

[node name="frame" type="Sprite2D" parent="Portrait"]
visible = false
position = Vector2(33, 5)
texture = ExtResource("5_kf4q6")

[node name="name" type="Label" parent="Portrait"]
layout_mode = 0
offset_left = 387.0
offset_top = 442.0
offset_right = 512.0
offset_bottom = 511.0
text = "Talya"
label_settings = SubResource("LabelSettings_3uust")

[node name="ColorRect" type="ColorRect" parent="Portrait"]
layout_mode = 0
offset_left = 378.0
offset_top = 503.0
offset_right = 932.0
offset_bottom = 513.0

[node name="UndoMove" type="Button" parent="."]
layout_mode = 0
offset_left = 1164.0
offset_top = 10.0
offset_right = 1204.0
offset_bottom = 50.0
scale = Vector2(4, 4)
icon = ExtResource("7_l2n6i")
flat = true
icon_alignment = 1

[node name="Overlays" type="Control" parent="."]
visible = false
z_index = 99
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(4, 4)
mouse_filter = 2

[node name="GameStart" type="Sprite2D" parent="Overlays"]
texture = ExtResource("6_wi4k2")
centered = false

[node name="Victory" type="Control" parent="Overlays"]
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="VictoryLabel" type="Label" parent="Overlays/Victory"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.5
offset_top = 49.0
offset_right = 33.5
offset_bottom = 72.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 70
text = "VICTORY"

[node name="ColorRect" type="ColorRect" parent="Overlays/Victory"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -183.0
offset_top = 145.0
offset_right = 187.0
offset_bottom = 147.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Overlays/Victory"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 148.0
offset_right = -142.0
grow_horizontal = 2
grow_vertical = 2

[node name="SoulsSavedLabel" type="Label" parent="Overlays/Victory/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Souls Saved"

[node name="SoulsSavedCount" type="Label" parent="Overlays/Victory/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "6"
horizontal_alignment = 2

[node name="Sprite2D" type="Sprite2D" parent="Overlays/Victory"]
modulate = Color(1, 1, 1, 0.239216)
position = Vector2(319.749, 180.226)
rotation = 1.57094
scale = Vector2(5.63069, 10.0212)
texture = SubResource("GradientTexture2D_fryhh")

[node name="NpcPortrait" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="NpcPortrait"]
layout_mode = 0
offset_left = 395.0
offset_top = 44.0
offset_right = 575.0
offset_bottom = 46.0

[node name="name" type="Label" parent="NpcPortrait"]
layout_mode = 0
offset_left = 401.0
offset_top = 25.0
offset_right = 572.0
offset_bottom = 48.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Bloat"
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="NpcPortrait"]
position = Vector2(607, 56)
texture = ExtResource("8_rfbs1")

[node name="DialogueBg" type="ColorRect" parent="NpcPortrait"]
layout_mode = 0
offset_left = 395.0
offset_top = 47.0
offset_right = 576.0
offset_bottom = 131.0
mouse_filter = 1
color = Color(0, 0, 0, 0.231373)

[node name="Dialogue" type="Label" parent="NpcPortrait"]
layout_mode = 0
offset_left = 399.0
offset_top = 55.0
offset_right = 570.0
offset_bottom = 123.0
theme_override_constants/line_spacing = -1
theme_override_font_sizes/font_size = 10
text = "Dialogue text goes here"
autowrap_mode = 3

[connection signal="pressed" from="EndTurn" to="." method="_on_end_turn_pressed"]
[connection signal="pressed" from="UndoMove" to="." method="_on_undo_move_pressed"]
